refactor: 将token登录改为用户名密码登录
